# workspace

./: CNAME  Cargo.toml  LICENSE-MIT  README  rustfmt.toml  sndjvu.h  sndjvu.h.html  x.sh
.github/workflows/: ci.yml  www.yml
codec/: Cargo.toml
codec/src/: bzz.rs  lib.rs  zp.rs
crates/sndjvu/: Cargo.toml
crates/sndjvu/src/: lib.rs
crates/sndjvu_codec/: Cargo.toml
crates/sndjvu_codec/src/: lib.rs
crates/sndjvu_format/: Cargo.toml
crates/sndjvu_format/src/: annot.rs  lib.rs  parsing.rs  ser.rs  shim.rs
crates/sndjvu_format/src/parsing/: ant.rs  mod.rs
crates/sndjvu_toolkit/: Cargo.toml
crates/sndjvu_toolkit/src/: main.rs
format/: Cargo.toml
format/src/: ant.rs  chunk.rs  document.rs  lib.rs  multi_page.rs  page.rs  txt.rs
rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdoc/sndjvu/: all.html  index.html  sidebar-items.js
rustdoc/sndjvu_codec/: all.html  enum.Step.html  index.html  sidebar-items.js
rustdoc/sndjvu_codec/bzz/: index.html  sidebar-items.js  struct.Scratch.html
rustdoc/sndjvu_format/: all.html  enum.ComponentKind.html  enum.Iw44ColorSpace.html  enum.Never.html  enum.PageRotation.html  enum.ZoneKind.html  index.html  sidebar-items.js  struct.DirmVersion.html  struct.FgbzVersion.html  struct.InfoVersion.html  struct.Iw44Version.html  struct.PaletteEntry.html  struct.PaletteIndex.html  struct.TxtVersion.html  struct.Zone.html
rustdoc/sndjvu_format/annot/: enum.Annot.html  enum.Border.html  enum.HorizAlign.html  enum.Mode.html  enum.Scalar.html  enum.Shape.html  enum.VertAlign.html  enum.Zoom.html  index.html  sidebar-items.js  struct.Color.html  struct.Highlight.html  struct.Key.html  struct.KeyError.html  struct.Link.html  struct.Maparea.html  struct.MarginStrings.html  struct.Point.html  struct.Quoted.html  struct.QuotedScalars.html
rustdoc/sndjvu_format/parsing/: enum.ComponentHead.html  enum.DocumentHead.html  enum.Element.html  enum.Iw44Kind.html  enum.Progress.html  enum.SmmrBody.html  fn.annots.html  fn.annots_lizardtech.html  fn.document.html  fn.indirect_component.html  index.html  sidebar-items.js  struct.Bookmark.html  struct.Bundled.html  struct.BundledIter.html  struct.Chunk.html  struct.ComponentMeta.html  struct.ComponentP.html  struct.DecodedAntz.html  struct.DecodedNavm.html  struct.Dirm.html  struct.DirmExtra.html  struct.ElementP.html  struct.Error.html  struct.Fgbz.html  struct.FgbzIndices.html  struct.Info.html  struct.Iw44.html  struct.Mmr.html  struct.MmrStripes.html  struct.ParsingAnnots.html  struct.ParsingBookmarks.html  struct.ParsingStripes.html  struct.RawAnta.html  struct.RawAntz.html  struct.RawBg44.html  struct.RawBgjp.html  struct.RawDirm.html  struct.RawDjbz.html  struct.RawFg44.html  (+13 more)
rustdoc/sndjvu_format/ser/: enum.SerializeMultiPageBundled.html  (+17 more)
rustdoc/sndjvu_toolkit/: all.html  fn.main.html  fn.run.html  index.html
src/: lib.rs
tools/: tree.rs
waist/: Cargo.toml
waist/src/: lib.rs
www/: index.html  spec.html
(+67 files in other folders)
