[package]
name = "sndjvu_format"
version = "0.0.0"

authors = ["Cole Miller <m@cole-miller.net>"]
description = "Parse and serialize DjVu documents"
homepage = "https://www.sndjvu.org"
repository = "https://github.com/sndjvu/workspace"
edition = "2021"
rust-version = "1.65.0" # std::backtrace

[features]
std = []
backtrace = ["std"]
