[package]
name = "sndjvu_format"
version = "0.1.0"

authors = ["Cole Miller <m@cole-miller.net>"]
description = "Parse and serialize DjVu documents"
edition = "2021"
homepage = "https://www.sndjvu.org"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sndjvu/workspace"
rust-version = "1.65.0" # std::backtrace

[features]
std = []
backtrace = ["std"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "sndjvu_doc_cfg"]
